HomeWorksJava po 2 savaite

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /.idea
 /out
 Exercises.iml
+
+/src/com/company/Pamoka_5/
+/src/com/company/Pamoka_6_static_obj/
+/src/com/company/Pamoka_7_LocalDateTime/
