--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 /.idea
 /out
 Exercises.iml
-/src/com/company/Pamoka_5/*
-/src/com/company/Pamoka_6_static_obj/*
-/src/com/company/Pamoka_7_LocalDateTime/*
+/src/com/company/ClassWork/
