added file system management, add interface to create cost/income, added some comments

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,8 @@
 Exercises.iml
 /src/com/company/classWork/
 /src/com/company/codeWars/
-/files/
+/files/uzd1
+/files/uzd2
+/files/copy.txt
+/files/original.txt
+/files/person_a
